--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-Flask==2.3.2
-flask-cors==4.0.0
-requests==2.31.0
-Pillow==10.2.0
-googletrans==4.0.0rc1
+flask
+gunicorn
+Pillow
+requests
+googletrans==4.0.0-rc1
+flask-cors
