--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,8 @@
-flask
-gunicorn
-Pillow
-requests
-googletrans==4.0.0-rc1
-flask-cors
-SpeechRecognition==3.8.1
-openai==0.27.2
+flask==2.0.1
 gunicorn==20.1.0
+Pillow==8.3.1
+requests==2.26.0
+flask-cors==3.0.10
 flask-socketio==5.3.2
 python-engineio==4.3.3
 python-socketio==5.7.1
-pyaudio==0.2.12
-pygame
-gTTS
