--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-flask==2.0.1
+flask==2.1.3
+werkzeug==2.1.2
 gunicorn==20.1.0
-Pillow==8.3.1
-requests==2.26.0
+Pillow==9.0.1
+requests==2.28.1
+googletrans==4.0.0-rc1
 flask-cors==3.0.10
 flask-socketio==5.3.2
 python-engineio==4.3.3
