--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,5 @@ googletrans==4.0.0-rc1
 flask-cors==3.0.10
 openai
 gTTS==2.3.2
-pygame==2.3.0
-python-dotenv==0.19.2
+pydub==0.25.1
+ffmpeg-python==0.2.0
