--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,6 @@ Pillow==9.0.1
 requests==2.28.1
 googletrans==4.0.0-rc1
 flask-cors==3.0.10
-openai
-gTTS==2.3.2
-pydub==0.25.1
-ffmpeg-python==0.2.0
-python-dotenv==0.19.2
+flask-socketio==5.3.2
+python-engineio==4.3.3
+python-socketio==5.7.1
