--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
-flask==2.1.3
-werkzeug==2.1.2
-gunicorn==20.1.0
-Pillow==9.0.1
-requests==2.28.1
-googletrans==4.0.0-rc1
+flask==2.3.2
 flask-cors==3.0.10
-openai
-gTTS==2.3.2
-pygame==2.3.0
-python-dotenv==0.19.2
+Pillow==10.0.0
+requests==2.31.0
+googletrans==4.0.0-rc1
+gtts==2.3.2
+openai==0.28.0
+python-dotenv==1.0.0
